--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights">
             <section>
-                <a href="https://youtube.com/shorts/_xVfUc_8hXE?feature=shared" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
+                <a href="https://youtu.be/hyivWQnglRk" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Project 1 CSE Simulator</h2>
