--- a/index.html
+++ b/index.html
@@ -5,89 +5,99 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
+
+<head>
     <title>Arnav Reddy's Website</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
+    <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
+</head>
 
-  <body class="is-preload">
+<body class="is-preload">
     <!-- Sidebar -->
     <section id="sidebar">
-      <div class="inner">
-        <nav>
-          <ul>
-            <li><a href="#intro">Welcome</a></li>
-            <li><a href="#one">My Projects</a></li>
-          </ul>
-        </nav>
-      </div>
+        <div class="inner">
+            <nav>
+                <ul>
+                    <li><a href="#intro">Welcome</a></li>
+                    <li><a href="#one">My Projects</a></li>
+                </ul>
+            </nav>
+        </div>
     </section>
 
     <!-- Wrapper -->
     <div id="wrapper">
-      <!-- Intro -->
-      <section id="intro" class="wrapper style1 fullscreen fade-up">
-        <div class="inner">
-          <h1>Arnav Reddy</h1>
-          <p>My 498.003 Projects & More!</p>
-          <ul class="actions">
-            <li><a href="#one" class="button scrolly">Learn more</a></li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- One -->
-      <section id="one" class="wrapper style2 spotlights">
-        <section>
-          <a href="https://youtu.be/hyivWQnglRk" class="image"
-            ><img src="images/p1.png" alt="" data-position="center center"
-          /></a>
-          <div class="content">
+        <!-- Intro -->
+        <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
-              <h2>Project 1 CSE Simulator</h2>
-              <p>
-                A VR game that simulates the life of a CSE student in the old
-                1695 BBB. Created using Unreal Engine 5.2.1 to develop the VR
-                gameplay. GitHub was used for version control and collaboration
-                with Milo Baumhardt. Jira was used for managing sprint tasks.
-                Models sourced from Sketchfab and audio sourced from
-                freesound.org. Animations created using Mixamo and all
-                development was tested on a Meta Quest Pro through the UMich
-                VizStudio. CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
-              </p>
-              <!-- <ul class="actions">
+                <h1>Arnav Reddy</h1>
+                <p>My 498.003 Projects & More!</p>
+                <ul class="actions">
+                    <li><a href="#one" class="button scrolly">Learn more</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- One -->
+        <section id="one" class="wrapper style2 spotlights">
+            <section>
+                <a href="https://youtu.be/hyivWQnglRk" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
+                <div class="content">
+                    <div class="inner">
+                        <h2>Project 1 CSE Simulator</h2>
+                        <p>
+                            A VR game that simulates the life of a CSE student in the old 1695 BBB. Created using Unreal Engine 5.2.1 to develop the VR gameplay. GitHub was used for version control and collaboration with Milo Baumhardt. Jira was used for managing sprint tasks. Models
+                            sourced from Sketchfab and audio sourced from freesound.org. Animations created using Mixamo and all development was tested on a Meta Quest Pro through the UMich VizStudio. CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
+                        </p>
+                        <!-- <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul> -->
-            </div>
-          </div>
+                    </div>
+                </div>
+            </section>
         </section>
-      </section>
-      <!-- Footer -->
-      <footer id="footer" class="wrapper style1-alt">
-        <div class="inner">
-          <ul class="menu">
-            <li>&copy; Untitled. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          </ul>
-        </div>
-      </footer>
+        <!-- two -->
+        <section id="two" class="wrapper style2 spotlights">
+            <section>
+                <a href="https://youtu.be/cIDTBsnto4Q" class="image"><img src="images/p2.png" alt="" data-position="center center" /></a>
+                <div class="content">
+                    <div class="inner">
+                        <h2>Project 2 A2Go</h2>
+                        <p>
+                            An AR app like Pokemon GO, which has 2 modes. One allows you to explore Ann Arbor by walking to landmarks. The other allows for placing 3d tree models around campus using AR. Created using Unity to develop the AR gameplay & app. GitHub was used for version
+                            control and collaboration with Milo Baumhardt. Jira was used for managing sprint tasks. Models sourced from Sketchfab and audio sourced from freesound.org. Animations created using Mixamo and all development was tested on an
+                            iPhone and Unity Editor. CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
+                        </p>
+                        <!-- <ul class="actions">
+                                  <li><a href="generic.html" class="button">Learn more</a></li>
+                              </ul> -->
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- Footer -->
+        <footer id="footer" class="wrapper style1-alt">
+            <div class="inner">
+                <ul class="menu">
+                    <li>&copy; Untitled. All rights reserved.</li>
+                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </div>
+        </footer>
 
-      <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/jquery.scrollex.min.js"></script>
-      <script src="assets/js/jquery.scrolly.min.js"></script>
-      <script src="assets/js/browser.min.js"></script>
-      <script src="assets/js/breakpoints.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
     </div>
-  </body>
+</body>
+
 </html>
