--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" />
-  </noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
 </head>
 
 <body class="is-preload">
@@ -45,13 +45,18 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights">
             <section>
-                <a href="https://youtu.be/hyivWQnglRk" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
+                <a href="https://youtu.be/hyivWQnglRk" class="image"><img src="images/p1.png" alt=""
+                        data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Project 1 CSE Simulator</h2>
                         <p>
-                            A VR game that simulates the life of a CSE student in the old 1695 BBB. Created using Unreal Engine 5.2.1 to develop the VR gameplay. GitHub was used for version control and collaboration with Milo Baumhardt. Jira was used for managing sprint tasks. Models
-                            sourced from Sketchfab and audio sourced from freesound.org. Animations created using Mixamo and all development was tested on a Meta Quest Pro through the UMich VizStudio. CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
+                            A VR game that simulates the life of a CSE student in the old 1695 BBB. Created using Unreal
+                            Engine 5.2.1 to develop the VR gameplay. GitHub was used for version control and
+                            collaboration with Milo Baumhardt. Jira was used for managing sprint tasks. Models
+                            sourced from Sketchfab and audio sourced from freesound.org. Animations created using Mixamo
+                            and all development was tested on a Meta Quest Pro through the UMich VizStudio. CLICK THE
+                            IMAGE TO VIEW THE DEMO ON YOUTUBE!
                         </p>
                         <!-- <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -63,18 +68,48 @@
         <!-- two -->
         <section id="two" class="wrapper style2 spotlights">
             <section>
-                <a href="https://youtu.be/cIDTBsnto4Q" class="image"><img src="images/p2.png" alt="" data-position="center center" /></a>
+                <a href="https://youtu.be/cIDTBsnto4Q" class="image"><img src="images/p2.png" alt=""
+                        data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Project 2 A2Go</h2>
                         <p>
-                            An AR app like Pokemon GO, which has 2 modes. One allows you to explore Ann Arbor by walking to landmarks. The other allows for placing 3d tree models around campus using AR. Created using Unity to develop the AR gameplay & app. GitHub was used for version
-                            control and collaboration with Milo Baumhardt. Jira was used for managing sprint tasks. Models sourced from Sketchfab and audio sourced from freesound.org. Animations created using Mixamo and all development was tested on an
+                            An AR app like Pokemon GO, which has 2 modes. One allows you to explore Ann Arbor by walking
+                            to landmarks. The other allows for placing 3d tree models around campus using AR. Created
+                            using Unity to develop the AR gameplay & app. GitHub was used for version
+                            control and collaboration with Milo Baumhardt. Jira was used for managing sprint tasks.
+                            Models sourced from Sketchfab and audio sourced from freesound.org. Animations created using
+                            Mixamo and all development was tested on an
                             iPhone and Unity Editor. CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
                         </p>
                         <!-- <ul class="actions">
                                   <li><a href="generic.html" class="button">Learn more</a></li>
                               </ul> -->
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- 3 -->
+        <section id="two" class="wrapper style2 spotlights">
+            <section>
+                <a href="https://youtu.be/kC9qdszij2I" class="image"><img src="images/p3.png" alt=""
+                        data-position="center center" /></a>
+                <div class="content">
+                    <div class="inner">
+                        <h2>Project 3 SpiroVR</h2>
+                        <p>
+                            SpiroVR is a collection of engaging mini games that act to enhance the patient experience
+                            when completing airway clearance procedures. It utilizes an arduino coupled with a
+                            spirometer sensor to obtain differential pressure data corresponding to the user's
+                            lung volume. SpiroVR allows patients to become enveloped in a virtual world with engaging
+                            tasks that require the user to perform actions mirroring airway clearance exerecies. By
+                            doing this, patients are distracted from the
+                            potentially stressful medical environment and are encouraged to perform well on the test.
+                            CLICK THE IMAGE TO VIEW THE DEMO ON YOUTUBE!
+                        </p>
+                        <!-- <ul class="actions">
+                                          <li><a href="generic.html" class="button">Learn more</a></li>
+                                      </ul> -->
                     </div>
                 </div>
             </section>
